--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "croatia_app"
 authors = [
-    { name = "Logicna Podloga J.d.o.o", email = "gjorgji.mladenovski@logicna-podloga.com"}
+    { name = "Logicna Podloga J.d.o.o", email = "gjorgji.mladenovski@logicna-podloga.com" },
 ]
 description = "računovodstvo for croatia"
 requires-python = ">=3.10"
@@ -19,34 +19,29 @@ build-backend = "flit_core.buildapi"
 [tool.bench.dev-dependencies]
 # package_name = "~=1.1.0"
 
+[tool.bench.commands]
+"update-croatian-translations" = "croatia_app.commands:update_croatian_translations"
+
 [tool.ruff]
 line-length = 110
 target-version = "py310"
 
 [tool.ruff.lint]
-select = [
-    "F",
-    "E",
-    "W",
-    "I",
-    "UP",
-    "B",
-    "RUF",
-]
+select = ["F", "E", "W", "I", "UP", "B", "RUF"]
 ignore = [
-    "B017", # assertRaises(Exception) - should be more specific
-    "B018", # useless expression, not assigned to anything
-    "B023", # function doesn't bind loop variable - will have last iteration's value
-    "B904", # raise inside except without from
-    "E101", # indentation contains mixed spaces and tabs
-    "E402", # module level import not at top of file
-    "E501", # line too long
-    "E741", # ambiguous variable name
-    "F401", # "unused" imports
-    "F403", # can't detect undefined names from * import
-    "F405", # can't detect undefined names from * import
-    "F722", # syntax error in forward type annotation
-    "W191", # indentation contains tabs
+    "B017",  # assertRaises(Exception) - should be more specific
+    "B018",  # useless expression, not assigned to anything
+    "B023",  # function doesn't bind loop variable - will have last iteration's value
+    "B904",  # raise inside except without from
+    "E101",  # indentation contains mixed spaces and tabs
+    "E402",  # module level import not at top of file
+    "E501",  # line too long
+    "E741",  # ambiguous variable name
+    "F401",  # "unused" imports
+    "F403",  # can't detect undefined names from * import
+    "F405",  # can't detect undefined names from * import
+    "F722",  # syntax error in forward type annotation
+    "W191",  # indentation contains tabs
     "UP030", # Use implicit references for positional format fields (translations)
     "UP031", # Use format specifiers instead of percent format
     "UP032", # Use f-string instead of `format` call (translations)
